# esi-shell

./: .gitmodules  .releaserc.yaml  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.ratpac  Dockerfile.test  LICENSE  README.md  esi-shell  package.json  pyproject.toml
.github/workflows/: build-pull-request.yml  delete_untagged.py  release.yml
.opticks/GEOM/: GEOM.sh
.opticks/GEOM/pfRICH/: origin.gdml
patches/: 0001-fix-add-missing-support-for-OptiX-7.6.patch  opticks-fix-update-array-dtype-for-numpy-1.26.patch
scripts/: submit.sh
spack/: repo.yaml
tests/: test_opticks.sh
