[project]
name = "esi-shell"
version = "1.4.4"
description = ""
authors = [ { name = "Dmitri Smirnov", email = "dmixsmi@gmail.com" } ]
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.24.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
